# Aayan

./: .gitignore  install.bat  karexpert_agent.py  pyproject.toml
authdemo/authdemo/: pom.xml
esign-frontend/: README.md  angular.json  package-lock.json  package.json
esign-frontend/src/: index.html  material-theme.scss  styles.css
esign-frontend/src/app/: app.routes.ts
esign-frontend/src/app/add-participant/: add-participant.component.css  add-participant.component.html  add-participant.component.ts
esign-frontend/src/app/dashboard/: dashboard.css  dashboard.html  dashboard.ts
esign-frontend/src/app/login/: login.css  login.html  login.ts
esign-frontend/src/app/manage-signature/: manage-signature.css  manage-signature.html  manage-signature.spec.ts  manage-signature.ts
esign-frontend/src/app/participant-dashboard/: participant-dashboard.css  participant-dashboard.html  participant-dashboard.ts
esign-frontend/src/app/participant-login/: participant-login.css  participant-login.html  participant-login.ts
esign-frontend/src/app/register/: register.html  register.ts
esign-frontend/src/app/review-send/: review-send.css  review-send.html  review-send.ts
esign-frontend/src/app/services/: auth.guard.ts  (+4 more)
hospital-adk-validator/: _test_endpoints.py  app.py  patients.csv
hospital-adk-validator/.claude/: CLAUDE.md
hospital-adk-validator/.claude/agents/: billing-agent.md  demographic-agent.md  statistics-agent.md  timeline-agent.md
hospital-adk-validator/core/: agents.py  hooks.py  loader.py  validator.py
hospital-adk-validator/templates/: index.html
(+23 files in other folders)
